# jeecg-a2a

./: .env.example  .gitignore  BROWSER_ACCESS_GUIDE.md  CDN_REPLACEMENT_GUIDE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  comprehensive_test.py  docker-compose.yml  main.py  minimal_server.py  pyproject.toml  quick_start.py  quick_test.py  requirements.txt  simple_app.py  simple_test.py  stable_server.py  start_simple.py  test_agent_registration.py  test_cdn_replacement.py  test_server.py  ultra_simple_server.py
api/: __init__.py  app.py  simple_routes.py
api/routes/: __init__.py  agents.py  chat.py  health.py  tasks.py  websocket.py
config/: __init__.py  agent_whitelist.json  settings.py  simple_settings.py
core/: __init__.py  agent_manager.py  models.py  platform.py
core/agent_registry/: __init__.py  registry.py
core/protocol/: __init__.py  handlers.py  models.py
core/scheduler/: __init__.py  scheduler.py
core/security/: __init__.py  cors_manager.py  middleware.py
docs/: TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md
scripts/: start.bat  start.sh  start_with_agent.py
tests/: __init__.py  test_chat_fixes.py  test_platform.py
ui/static/css/: style.css
ui/static/js/: app.js
ui/templates/: agents.html  base.html  chat.html  dashboard.html  tasks.html
utils/: __init__.py  helpers.py  logging.py
